# infrastructure_deployments

./: .gitignore  README.md  docker-compose-inferenc.yaml  docker-compose-inference.yaml  docker-compose-ml.yaml  docker-compose-monitoring.yaml  docker-compose-traefik.yaml  docker-compose.yaml  init-influx.sh  mosquitto.conf  mqtt_testclient.py  mqtt_testclient_calibration.py  mqtt_testclient_measurement.py  publish_testdata_mlflow.py  publish_ual_custom_data.py  publish_ual_test_data.py  pyproject.toml  requirements.txt  telegraf.conf  vault.yaml
.github/workflows/: ci-cd-pipeline.yml  data-pipeline.yml  inference-pipeline.yml  mlflow-pipeline.yml  monitoring-pipeline.yml  traefik-pipeline.yml
configs/: telegraf.conf
configs/alertmanager/: alertmanager.yaml
configs/grafana-provisioning/dashboards/: dashboards.yaml
configs/grafana-provisioning/dashboards/json/: New dashboard-1749750342081.json
configs/mlflow/: credentials
configs/mosquitto/: mosquitto.conf
configs/prometheus/: alerts.yaml  prometheus.yaml
docker/alertmanager-docker/: Dockerfile
docker/mlflow-docker/: Dockerfile  requirements.txt
grafana-provisioning/datasources/: influxdb.yaml
mlflow-docker/: requirements.txt
scripts_docker/: init-influx.sh
scripts_python/: publish_ual_custom_data.py
test_clients/: publish_ual_custom_data.py
