[project]
name = "infrastructure-deployments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=3.8.1",
    "paho-mqtt>=2.1.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "ual",
]

[tool.uv.sources]
ual = { git = "https://github.com/urban-air-lab/common" }
